# Hexa-Arm

./: README.md
hexaarm_bringup/: CMakeLists.txt  package.xml
hexaarm_bringup/STM_CODE/Pentabot/: .cproject  .mxproject  .project  Pentabot Debug.launch  Pentabot.ioc  Pentabot.txt
hexaarm_bringup/STM_CODE/Pentabot/Core/Inc/: main.h  stm32f4xx_it.h
hexaarm_bringup/STM_CODE/Pentabot/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
hexaarm_bringup/STM_CODE/Pentabot/Debug/: Pentabot.elf  Pentabot.list  Pentabot.map  makefile
hexaarm_bringup/STM_CODE/Pentabot/Debug/Core/Src/: main.cyclo  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su
hexaarm_bringup/launch/: gamepad_sim.launch.py  physical_arm.launch.py  simlation_arm.launch.py
hexaarm_controller/: CMakeLists.txt  hexaarm_controller.xml  hexaarm_hardware_plugin.xml  package.xml
hexaarm_controller/config/: hexaarm_controllers.yaml
hexaarm_controller/include/hexaarm_controller/: hexaarm_hardware.hpp  hexaarm_interface.hpp
hexaarm_controller/launch/: controller.launch.py
hexaarm_controller/src/: hexaarm_hardware.cpp  hexaarm_interface.cpp
hexaarm_description/: CMakeLists.txt  package.xml
hexaarm_description/launch/: gazebo.launch.py  robot_description.launch.py  robot_gazebo.launch.py  robot_sim.launch.py
hexaarm_description/meshes/: base_assembly.stl  base_shoulder_assembly.stl  elbow_wrist1_assembly.stl  gripper_assembly.stl  left_gripper.stl  right_gripper.stl  shoulder_elbow_assembly.stl  wrist1_wrist2_assembly.stl
hexaarm_description/urdf/: hexaarm.urdf.xacro  hexaarm_gazebo.xacro  hexaarm_ros2_control.xacro
hexaarm_moveit/: CMakeLists.txt  package.xml
hexaarm_moveit/config/: hexaarm.srdf  initial_positions,yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml
hexaarm_moveit/launch/: moveit.launch.py
hexaarm_moveit_servo/: CMakeLists.txt  package.xml
hexaarm_moveit_servo/config/: hexaarm_moveit_servo_config.yaml
hexaarm_moveit_servo/include/hexaarm_moveit_servo/: hexaarm_joystick_input.h
hexaarm_moveit_servo/launch/: hexaarm_moveit_servo.launch.py
hexaarm_moveit_servo/launch/lib/: robot_moveit_config_lib.py
hexaarm_moveit_servo/rviz/: rviz_servo.rviz
hexaarm_moveit_servo/src/: hexaarm_joystick_input.cpp
